add indexer snapshot
